--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 kotlin = "1.6.0"
-ktx-coroutines = "1.6.0-RC"
+ktx-coroutines = "1.6.0-RC3"
 ktx-serialization = "1.3.1"
-ktor = "1.6.7"
+ktor = "2.0.0-beta-1"
 junixsocket = "2.4.0"
 
 [libraries.ktx-coroutines-core]
