--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "1.6.0"
 ktx-coroutines = "1.6.0-RC3"
 ktx-serialization = "1.3.1"
-ktor = "2.0.0-beta-1"
+ktor = "1.6.7"
 junixsocket = "2.4.0"
 
 [libraries.ktx-coroutines-core]
