--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,9 @@
 kotlin = "1.6.0"
 ktx-coroutines = "1.6.0-RC3"
 ktx-serialization = "1.3.1"
-ktor = "1.6.7"
+ktor = "2.0.0-beta-1"
 junixsocket = "2.4.0"
+kotest = "5.0.3"
 
 [libraries.ktx-coroutines-core]
 module = "org.jetbrains.kotlinx:kotlinx-coroutines-core"
@@ -25,12 +26,32 @@ version.ref = "ktx-serialization"
 module = "io.ktor:ktor-client-core"
 version.ref = "ktor"
 
-[libraries.ktor-client-cio]
-module = "io.ktor:ktor-client-cio"
+[libraries.ktor-client-okhttp]
+module = "io.ktor:ktor-client-okhttp"
 version.ref = "ktor"
 
 [libraries.ktor-client-serialization]
 module = "io.ktor:ktor-client-serialization"
+version.ref = "ktor"
+
+[libraries.ktor-client-json]
+module = "io.ktor:ktor-client-json"
+version.ref = "ktor"
+
+[libraries.ktor-client-mock]
+module = "io.ktor:ktor-client-mock"
+version.ref = "ktor"
+
+[libraries.ktor-client-content-negotiation]
+module = "io.ktor:ktor-client-content-negotiation"
+version.ref = "ktor"
+
+[libraries.ktor-serialization-kotlinx-json]
+module = "io.ktor:ktor-serialization-kotlinx-json"
+version.ref = "ktor"
+
+[libraries.ktor-network]
+module = "io.ktor:ktor-network"
 version.ref = "ktor"
 
 [libraries.junixsocket-common]
@@ -41,11 +62,29 @@ version.ref = "junixsocket"
 module = "com.kohlschutter.junixsocket:junixsocket-native-common"
 version.ref = "junixsocket"
 
+[libraries.kotest-framework-engine]
+module = "io.kotest:kotest-framework-engine"
+version.ref = "kotest"
+
+[libraries.kotest-framework-datatest]
+module = "io.kotest:kotest-framework-datatest"
+version.ref = "kotest"
+
+[libraries.kotest-assertions-core]
+module = "io.kotest:kotest-assertions-core"
+version.ref = "kotest"
+
+[libraries.kotest-runner-junit5-jvm]
+module = "io.kotest:kotest-runner-junit5-jvm"
+version.ref = "kotest"
+
 [bundles]
-ktor = ["ktor-client-core", "ktor-client-cio", "ktor-client-serialization"]
+ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json"]
 ktx = ["ktx-coroutines-core", "ktx-serialization-core", "ktx-serialization-json"]
 junixsocket = ["junixsocket-common", "junixsocket-native-common"]
+kotest = ["kotest-framework-engine", "kotest-framework-datatest", "kotest-assertions-core"]
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotest = { id = "io.kotest.multiplatform", version.ref = "kotest" }
