--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,13 @@
 name: Build
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
   workflow_dispatch:
-
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-18.04
     permissions:
       contents: read
