Publish only to Maven Central repository

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,5 +32,5 @@ jobs:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          arguments: clean publish
+          arguments: clean publishAllPublicationsToMavenCentralRepository
           gradle-version: wrapper
