--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ ktx-serialization = "1.3.1"
 ktor = "1.6.7"
 junixsocket = "2.4.0"
 kotest = "5.0.3"
+kotest-assertions-ktor = "1.0.3"
 ktx-datetime = "0.3.1"
 
 [libraries.ktx-coroutines-core]
@@ -73,7 +74,7 @@ version.ref = "kotest"
 
 [libraries.kotest-assertions-ktor]
 module = "io.kotest:kotest-assertions-ktor"
-version.ref = "kotest"
+version.ref = "kotest-assertions-ktor"
 
 [libraries.kotest-runner-junit5-jvm]
 module = "io.kotest:kotest-runner-junit5-jvm"
@@ -84,7 +85,7 @@ module = "org.jetbrains.kotlinx:kotlinx-datetime"
 version.ref = "ktx-datetime"
 
 [bundles]
-ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json"]
+ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network"]
 ktx = ["ktx-coroutines-core", "ktx-serialization-core", "ktx-serialization-json"]
 junixsocket = ["junixsocket-common", "junixsocket-native-common"]
 kotest = ["kotest-framework-engine", "kotest-framework-datatest", "kotest-assertions-core"]
