--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
-kotlin = "1.6.0"
-ktx-coroutines = "1.6.0-RC3"
+kotlin = "1.6.10"
+ktx-coroutines = "1.6.0-native-mt"
 ktx-serialization = "1.3.1"
-ktor = "2.0.0-beta-1"
+ktor = "1.6.7"
 junixsocket = "2.4.0"
 kotest = "5.0.3"
+kotest-assertions-ktor = "1.0.3"
 ktx-datetime = "0.3.1"
 
 [libraries.ktx-coroutines-core]
@@ -43,10 +44,6 @@ version.ref = "ktor"
 module = "io.ktor:ktor-client-mock"
 version.ref = "ktor"
 
-[libraries.ktor-client-content-negotiation]
-module = "io.ktor:ktor-client-content-negotiation"
-version.ref = "ktor"
-
 [libraries.ktor-serialization-kotlinx-json]
 module = "io.ktor:ktor-serialization-kotlinx-json"
 version.ref = "ktor"
@@ -75,6 +72,10 @@ version.ref = "kotest"
 module = "io.kotest:kotest-assertions-core"
 version.ref = "kotest"
 
+[libraries.kotest-assertions-ktor]
+module = "io.kotest.extensions:kotest-assertions-ktor"
+version.ref = "kotest-assertions-ktor"
+
 [libraries.kotest-runner-junit5-jvm]
 module = "io.kotest:kotest-runner-junit5-jvm"
 version.ref = "kotest"
@@ -84,7 +85,7 @@ module = "org.jetbrains.kotlinx:kotlinx-datetime"
 version.ref = "ktx-datetime"
 
 [bundles]
-ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json"]
+ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network"]
 ktx = ["ktx-coroutines-core", "ktx-serialization-core", "ktx-serialization-json"]
 junixsocket = ["junixsocket-common", "junixsocket-native-common"]
 kotest = ["kotest-framework-engine", "kotest-framework-datatest", "kotest-assertions-core"]
