--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,14 @@
-[*.{kt,kts}]
-disabled_rules=no-wildcard-imports,experimental:annotation
-indent_size=4
-insert_final_newline=true
-max_line_length=off
+[{*.kt,*.kts}]
+ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
+ij_kotlin_line_comment_at_first_column = false
+ij_kotlin_line_comment_add_space = true
+ij_kotlin_name_count_to_use_star_import = 2147483647
+ij_kotlin_name_count_to_use_star_import_for_members = 2147483647
+ij_kotlin_keep_blank_lines_in_declarations = 1
+ij_kotlin_keep_blank_lines_in_code = 1
+ij_kotlin_keep_blank_lines_before_right_brace = 0
+ij_kotlin_align_multiline_parameters = false
+ij_continuation_indent_size = 4
+
+[**/commonTest/**.kt]
+ktlint_ignore_back_ticked_identifier=true
