Enable Gradle caching

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 kotlin.code.style=official
 kotlin.native.enableDependencyPropagation=true
 kotlin.mpp.stability.nowarn=true
+org.gradle.caching=true
 org.gradle.parallel=true
