--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ ktor = "1.6.7"
 junixsocket = "2.4.0"
 ktx-datetime = "0.3.1"
 junit = "5.6.2"
+plugin-kotlinter = "3.9.0"
+plugin-publishOnCentral = "1.0.2"
 
 [libraries.ktx-coroutines-core]
 module = "org.jetbrains.kotlinx:kotlinx-coroutines-core"
@@ -75,3 +77,5 @@ junixsocket = ["junixsocket-common", "junixsocket-native-common"]
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlinter = { id = "org.jmailen.kotlinter", version.ref = "plugin-kotlinter" }
+publishOnCentral = { id = "org.danilopianini.publish-on-central", version.ref = "plugin-publishOnCentral" }
