--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          arguments: clean build -x allTests -x jvmTest -x lintKotlin
+          arguments: clean --no-configuration-cache build -x allTests -x jvmTest -x lintKotlin
           gradle-version: wrapper
