--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-kotlin = "1.6.10"
-ktx-coroutines = "1.6.0-native-mt"
-ktx-serialization = "1.3.1"
-ktor = "1.6.7"
-junixsocket = "2.4.0"
-ktx-datetime = "0.3.1"
+kotlin = "1.7.20"
+ktx-coroutines = "1.6.3-native-mt"
+ktx-serialization = "1.4.1"
+ktor = "2.1.2"
+junixsocket = "2.6.1"
+ktx-datetime = "0.4.0"
 junit = "5.6.2"
 plugin-kotlinter = "3.9.0"
-plugin-publishOnCentral = "0.7.19"
+plugin-publishOnCentral = "2.0.8"
 
 [libraries.ktx-coroutines-core]
 module = "org.jetbrains.kotlinx:kotlinx-coroutines-core"
@@ -45,6 +45,10 @@ version.ref = "ktor"
 module = "io.ktor:ktor-client-mock"
 version.ref = "ktor"
 
+[libraries.ktor-client-content-negotiation]
+module = "io.ktor:ktor-client-content-negotiation"
+version.ref = "ktor"
+
 [libraries.ktor-serialization-kotlinx-json]
 module = "io.ktor:ktor-serialization-kotlinx-json"
 version.ref = "ktor"
@@ -70,7 +74,7 @@ module = "org.junit.jupiter:junit-jupiter-engine"
 version.ref = "junit"
 
 [bundles]
-ktor = ["ktor-client-core", "ktor-client-okhttp", "ktor-client-serialization", "ktor-client-json", "ktor-network"]
+ktor = ["ktor-client-core", "ktor-client-serialization", "ktor-client-json", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json", "ktor-network"]
 ktx = ["ktx-coroutines-core", "ktx-serialization-core", "ktx-serialization-json"]
 junixsocket = ["junixsocket-common", "junixsocket-native-common"]
 
