--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
