Disable native target due lack of DNS capabilities in Ktor CIO engine

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ kotlin.mpp.stability.nowarn=true
 org.gradle.caching=true
 org.gradle.parallel=true
 #org.gradle.unsafe.configuration-cache=true
+yoki.native-targets=false
