--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ org.gradle.caching=true
 org.gradle.parallel=true
 #org.gradle.unsafe.configuration-cache=true
 yoki.native-targets=false
+kotlin.mpp.enableCInteropCommonization=true
