Install Detekt plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ plugin-kotlinter = "3.9.0"
 plugin-publishOnCentral = "2.0.8"
 plugin-binaryCompatibilityValidator = "0.12.1"
 plugin-kover = "0.6.1"
+plugin-detekt = "1.22.0-RC2"
 
 [libraries.ktx-coroutines-core]
 module = "org.jetbrains.kotlinx:kotlinx-coroutines-core"
@@ -95,3 +96,4 @@ kotlinter = { id = "org.jmailen.kotlinter", version.ref = "plugin-kotlinter" }
 publishOnCentral = { id = "org.danilopianini.publish-on-central", version.ref = "plugin-publishOnCentral" }
 binaryCompatibilityValidator = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "plugin-binaryCompatibilityValidator" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "plugin-kover" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "plugin-detekt" }
