Enable Native targets

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@ kotlin.mpp.stability.nowarn=true
 org.gradle.caching=true
 org.gradle.parallel=true
 #org.gradle.unsafe.configuration-cache=true
-yoki.native-targets=false
+yoki.native-targets=true
 kotlin.mpp.enableCInteropCommonization=true
