--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ junixsocket = "2.6.1"
 ktx-datetime = "0.4.0"
 junit = "5.6.2"
 okio = "3.2.0"
+slf4j = "2.0.3"
 plugin-kotlinter = "3.9.0"
 plugin-publishOnCentral = "2.0.8"
 plugin-binaryCompatibilityValidator = "0.12.1"
@@ -84,6 +85,10 @@ version.ref = "junit"
 [libraries.okio]
 module = "com.squareup.okio:okio"
 version.ref = "okio"
+
+[libraries.slf4j-api]
+module = "org.slf4j:slf4j-api"
+version.ref = "slf4j"
 
 [bundles]
 ktor = ["ktor-client-core", "ktor-client-serialization", "ktor-client-json", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json", "ktor-network"]
