Enable configuration cache back and disable native targets

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
+# suppress inspection "UnusedProperty" for whole file
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 org.gradle.caching=true
 org.gradle.parallel=true
-#org.gradle.unsafe.configuration-cache=true
-yoki.native-targets=true
+org.gradle.unsafe.configuration-cache=true
+yoki.native-targets=false
 kotlin.mpp.enableCInteropCommonization=true
