--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,10 @@ name: Publish
 
 # TODO trigger publish on release as well
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
+
 jobs:
   publish:
     name: Publish
