--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,5 +33,5 @@ jobs:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          arguments: publishAllPublicationsToMavenCentralRepository
+          arguments: --no-configuration-cache publishAllPublicationsToMavenCentralRepository
           gradle-version: wrapper
