--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,5 @@ ij_kotlin_keep_blank_lines_in_code = 1
 ij_kotlin_keep_blank_lines_before_right_brace = 0
 ij_kotlin_align_multiline_parameters = false
 ij_continuation_indent_size = 4
-
-[**/commonTest/**.kt]
-ktlint_ignore_back_ticked_identifier=true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+ij_kotlin_allow_trailing_comma = true
