--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           arguments: koverXmlReport --continue --stacktrace
           gradle-version: wrapper
       - name: Upload coverage to Codecov
-      - uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ${{ github.workspace }}/build/reports/kover/report.xml
