Continue upload on error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           arguments: koverXmlReport --continue --stacktrace
           gradle-version: wrapper
+        continue-on-error: true
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
