--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,48 @@
 name: Build
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+  pull_request:
   workflow_dispatch:
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          server-id: github
+          cache: 'gradle'
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: KtLint
+        uses: burrunan/gradle-cache-action@v1
+        with:
+          arguments: lintKotlin --continue --stacktrace
+          gradle-version: wrapper
+      - name: Detekt
+        uses: burrunan/gradle-cache-action@v1
+        with:
+          arguments: detekt --continue --stacktrace
+          gradle-version: wrapper
+      - name: Kover
+        uses: burrunan/gradle-cache-action@v1
+        with:
+          arguments: koverXmlReport --continue --stacktrace
+          gradle-version: wrapper
+        continue-on-error: true
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ${{ github.workspace }}/build/reports/kover/report.xml
+          fail_ci_if_error: true
+          verbose: true
   build:
-    name: Build
     runs-on: ubuntu-latest
     permissions:
       contents: read
