--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,25 @@ jobs:
           files: ${{ github.workspace }}/build/reports/kover/report.xml
           fail_ci_if_error: true
           verbose: true
+  binary-compatibility:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'adopt'
+          server-id: github
+          cache: 'gradle'
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Check binary Compatibility
+        uses: burrunan/gradle-cache-action@v1
+        with:
+          arguments: apiCheck
+          gradle-version: wrapper
   build:
     runs-on: ubuntu-latest
     permissions:
@@ -67,5 +86,5 @@ jobs:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          arguments: clean --no-configuration-cache build -x allTests -x jvmTest -x lintKotlin
+          arguments: clean --no-configuration-cache build -x apiCheck -x allTests -x jvmTest -x lintKotlin
           gradle-version: wrapper
