--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,8 @@
 name: Publish
-
-# TODO trigger publish on release as well
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
-
+  release:
+    types: [ created ]
 jobs:
   publish:
     name: Publish
@@ -16,10 +13,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup JDK 8
+      - name: Setup JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '8'
+          java-version: '11'
           distribution: 'adopt'
           server-id: github
           cache: 'gradle'
@@ -33,5 +30,5 @@ jobs:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          arguments: --no-configuration-cache publishAllPublicationsToMavenCentralSnapshotsRepository
+          arguments: --no-configuration-cache publish
           gradle-version: wrapper
