--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 kotlin = "1.8.22"
-ktx-coroutines = "1.6.3-native-mt"
+ktx-coroutines = "1.7.3"
 ktx-serialization = "1.5.1"
 ktor = "2.3.3"
 junixsocket = "2.6.1"
 ktx-datetime = "0.4.0"
 junit = "5.9.3"
-okio = "3.3.0"
+okio = "3.5.0"
 slf4j = "2.0.7"
 plugin-kotlinter = "3.15.0"
 plugin-publishOnCentral = "5.0.10"
