--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,10 @@ version.ref = "ktor"
 module = "io.ktor:ktor-client-json"
 version.ref = "ktor"
 
+[libraries.ktor-client-logging]
+module = "io.ktor:ktor-client-logging"
+version.ref = "ktor"
+
 [libraries.ktor-client-mock]
 module = "io.ktor:ktor-client-mock"
 version.ref = "ktor"
@@ -96,7 +100,7 @@ module = "org.jetbrains.kotlinx:kotlinx-io-core"
 version.ref = "kotlinx-io"
 
 [bundles]
-ktor = ["ktor-client-core", "ktor-client-serialization", "ktor-client-json", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json", "ktor-network"]
+ktor = ["ktor-client-core", "ktor-client-serialization", "ktor-client-json", "ktor-client-logging", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json", "ktor-network"]
 ktx = ["ktx-coroutines-core", "ktx-serialization-core", "ktx-serialization-json"]
 
 [plugins]
