chore: configure pom

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,19 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.unsafe.configuration-cache=true
 kotlin.mpp.enableCInteropCommonization=true
+
+POM_NAME=docker-kotlin
+POM_DESCRIPTION=Docker Engine Remote API client
+POM_URL=https://github.com/DevNatan/docker-kotlin
+POM_INCEPTION_YEAR=2021
+POM_SCM_URL=https://github.com/DevNatan/docker-kotlin
+POM_SCM_CONNECTION=scm:git:git:github.com/DevNatan/docker-kotlin.git
+POM_SCM_DEV_CONNECTION=scm:git:https://github.com/DevNatan/docker-kotlin.git
+POM_LICENCE_NAME=MIT License
+POM_LICENSE_URL=https://github.com/DevNatan/docker-kotlin/blob/main/LICENSE
+POM_DEVELOPER_ID=DevNatan
+POM_DEVELOPER_NAME=Natan Vieira do Nascimento
+POM_DEVELOPER_URL=natanvnascimento@gmail.com
+POM_DEVELOPER_EMAIL=https://github.com/DevNatan
+SONATYPE_HOST=CENTRAL_PORTAL
+RELEASE_SIGNING_ENABLED=true
