--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,52 +1,10 @@
 name: Build
+
 on:
-  workflow_dispatch:
   push:
+    branches: [main]
+
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github
-          cache: 'gradle'
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.4
-      - name: KtLint
-        uses: burrunan/gradle-cache-action@v1
-        with:
-          arguments: lintKotlin --continue --stacktrace
-          gradle-version: wrapper
-      - name: Detekt
-        uses: burrunan/gradle-cache-action@v1
-        with:
-          arguments: detekt --continue --stacktrace
-          gradle-version: wrapper
-  binary-compatibility:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          server-id: github
-          cache: 'gradle'
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.4
-      - name: Check binary Compatibility
-        uses: burrunan/gradle-cache-action@v1
-        with:
-          arguments: apiCheck
-          gradle-version: wrapper
   build:
     runs-on: ubuntu-latest
     permissions:
@@ -54,23 +12,20 @@ jobs:
       packages: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'temurin'
           server-id: github
-          cache: 'gradle'
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.4
-      - name: Build with Gradle
-        uses: burrunan/gradle-cache-action@v1
-        env:
-          OSSRH_SIGNING_KEY: ${{ secrets.OSSRH_SIGNING_KEY }}
-          OSSRH_SIGNING_PASSWORD: ${{ secrets.OSSRH_SIGNING_PASSWORD }}
-          GITHUB_USERNAME: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          arguments: clean --no-configuration-cache --no-build-cache build -x check
-          gradle-version: wrapper
+          settings-path: ${{ github.workspace }}
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      - name: Build
+        run: ./gradlew build
