--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -3,7 +3,6 @@ name: Integration Tests
 on:
   push:
     branches: [ main ]
-  pull_request:
 
 jobs:
   docker:
@@ -18,21 +17,27 @@ jobs:
           - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Setup Docker
-        uses: docker-practice/actions-setup-docker@master
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: 'temurin'
           server-id: github
-          cache: 'gradle'
+          settings-path: ${{ github.workspace }}
+
+      - name: Setup Docker
+        uses: docker-practice/actions-setup-docker@master
+
       - name: Prune Docker System
         run: docker system prune -a -f
+
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
+
       - name: Run Tests
-        uses: burrunan/gradle-cache-action@v1
-        with:
-          arguments: allTests
-          gradle-version: wrapper
+        run: ./gradlew allTests
